--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,22 @@ dependencies:
   google_sign_in: ^6.2.2
   shimmer: ^3.0.0
   cached_network_image: ^3.4.1
+  video_player: ^2.9.3
+  chewie: ^1.10.0
+  youtube_player_flutter: ^9.1.1
+  youtube_player_iframe: ^5.2.1
+  geocoding: ^3.0.0
+  google_maps_flutter: ^2.11.0
 
 dev_dependencies:
+  flutter_launcher_icons: '^0.10.0'
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
